k8s/opendesk/deploy-element.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: element
    app.kubernetes.io/component: messaging
    app.kubernetes.io/managed-by: nix
    app.kubernetes.io/name: element
    app.kubernetes.io/part-of: opendesk
  name: element
  namespace: opendesk
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: element
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: element-config-v1
      labels:
        app: element
        app.kubernetes.io/component: messaging
        app.kubernetes.io/managed-by: nix
        app.kubernetes.io/name: element
        app.kubernetes.io/part-of: opendesk
    spec:
      containers:
      - image: docker.io/vectorim/element-web:latest
        imagePullPolicy: IfNotPresent
        name: element
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: false
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/config.json
          name: config
          readOnly: true
          subPath: config.json
      dnsConfig:
        searches:
        - opendesk.svc.cluster.local
        - svc.cluster.local
        - cluster.local
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        runAsUser: 1000
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: config.json
            path: config.json
          name: element-config
        name: config
