k8s/opendesk/deploy-synapse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: synapse
    app.kubernetes.io/component: messaging
    app.kubernetes.io/managed-by: nix
    app.kubernetes.io/name: synapse
    app.kubernetes.io/part-of: opendesk
  name: synapse
  namespace: opendesk
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: synapse
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/config: synapse-config-v1
      labels:
        app: synapse
        app.kubernetes.io/component: messaging
        app.kubernetes.io/managed-by: nix
        app.kubernetes.io/name: synapse
        app.kubernetes.io/part-of: opendesk
    spec:
      containers:
      - env:
        - name: SYNAPSE_SERVER_NAME
          value: matrix.home.opendesk-edu.org
        - name: SYNAPSE_REPORT_STATS
          value: 'no'
        - name: SYNAPSE_CONFIG_PATH
          value: /config/homeserver.yaml
        image: docker.io/matrixdotorg/synapse:latest
        imagePullPolicy: IfNotPresent
        name: synapse
        ports:
        - containerPort: 8008
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: '1'
            memory: 2Gi
          requests:
            cpu: 250m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: false
          runAsGroup: 991
          runAsNonRoot: true
          runAsUser: 991
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: config
          readOnly: true
        - mountPath: /data/log.config
          name: log-config
          readOnly: true
          subPath: log.config
        - mountPath: /data
          name: data
      dnsConfig:
        searches:
        - opendesk.svc.cluster.local
        - svc.cluster.local
        - cluster.local
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 991
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        runAsUser: 991
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: synapse-config
        name: config
      - configMap:
          defaultMode: 420
          items:
          - key: log.config
            path: log.config
          name: synapse-config
        name: log-config
      - name: data
        persistentVolumeClaim:
          claimName: synapse-data
